tests/03_run/overflow/compare/out4.exp
═══════════════════ Testando o código com os casos de teste ═══════════════════
=> Códigos:[exception.py] Testes:[cases.tio(01)] [ϵ]
(ϵ execution)[00] GR:100 cases.tio ()
╭──────────────────────────────────────────────────────────────────────────────
│                    (ϵ execution)[00] GR:100 cases.tio ()                     
├─────────────────────────────────── INPUT ────────────────────────────────────
│ 1
│ 2
│ 3
│ 4
├────────────────────────────────── EXPECTED ──────────────────────────────────
│ 1
│ 2
│ 3
│ 4
├────────────────────────────────── RECEIVED ──────────────────────────────────
│   File "/home/lion/Dropbox/gits/tools/tko/tests/03_run/overflow/exception.py", line 1
│     except "Out"
│     ^^^^^^
│ SyntaxError: invalid syntax
╰──────────────────────────────────────────────────────────────────────────────
